# pyNmeaParser

./: LICENSE  README.md  pyproject.toml
examples/: read_from_serial.py  sample_data.txt  simple_parse.py
src/: .gitignore
src/pynmeaparser/: __init__.py
tests/: test_pynmeaparser.py  test_samples.txt
